--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+0.1.06	28-Jan-2018
+	- Added group replication topology.
 0.1.05	27-Jan-2018
 	- Added option --master to 'single' command
 	- Added new commands to each sandbox: add_option, show_binlog,
