Improved docs and gropu replication checks
- Updated README.md
- Changed formatting for "usage" command
- Run detection of invalid group replication earlier.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.1.09	30-Jan-2018
+	- Updated README.md
+	- Changed formatting for "usage" command
+	- Run detection of invalid group replication earlier.
 0.1.08	29-Jan-2018
 	- Added sandbox description file
 	- 'sandboxes' command uses above file for sandbox listing
