--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.1.10	30-Jan-2018
+	- Changed initialization method to use tarball libraries
+	- Fixed glitch in "unpack" when original tarball has clashing name
 0.1.09	30-Jan-2018
 	- Updated README.md
 	- Changed formatting for "usage" command
