--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+0.1.13	06-Feb-2018
+	- The templates command is now hidden
+	- Added comman "templates export"
+	- Added flag --single-primary for group replication
+	- Added flags --sandbox-directory, --port, and base-port
+	  to allow deploying several sandboxes of the same version.
+	- Added a check for clash on installed ports
+	- INCOMPATIBLE change: Changed format of sbdescription.json: 
+	  now can list several ports per sandbox.
 0.1.12	04-Feb-2018
 	- Added a check for version before applying gtid.
 	- Added commands templates list/show/describe
