Minor documentation changes

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,6 @@
 0.1.13	06-Feb-2018
 	- The templates command is now hidden
-	- Added comman "templates export"
+	- Added command "templates export"
 	- Added flag --single-primary for group replication
 	- Added flags --sandbox-directory, --port, and base-port
 	  to allow deploying several sandboxes of the same version.
