Added custom abbreviations feature.
Abbreviations work with a file named "abbreviations.txt" where every line
is an abbreviation followed by its replacement.
If an argument in the command line matches an abbreviation, it will be replaced
by the items defined in the file.
For example, the file contains this line:
	sbs sandboxes

when the user types "dbdeployer sbs", it will be replaced with "dbdeployer sandboxes"

A more interesting example:
	group  replication --topology=group

Here, a command "dbdeployer group 8.0.4" becomes "dbdeployer replication --topology=group 8.0.4"
It is also possible to set variables in the replacement.
    sbdef --sandbox-directory={{.sb}} --port={{.port}}

To use this abbreviation, we need to provide the values for 'sb' and 'port'
dbdeployer sbdef:port=9000,sb=mysandbox single 8.0.4
it will become  "dbdeployer --sandbox-directory=mysandbox --port=9000 single 8.0.4

See the file abbreviations/sample_abbreviations.txt for some examples.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.1.15	08-Feb-2018
+	- Changed default port and sandbox directory for single-primary group
+	  replication.
+	- Added custom abbreviations feature.
 0.1.14	07-Feb-2018
 	- Added script test_sb to every single sandbox
 	- Added script test_sb_all to all multiple/group/replication sandbox
