--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.1.25	26-Feb-2018
+	- Added commands "admin lock" and "admin unlock" to prevent/allow deletion
+	of a sandbox.
+	- Added placeholder fields for multi-source clustering in defaults
 0.1.24	20-Feb-2018
 	- Fixed bug with "sandboxes" command. It would not check if the 
 	  sandbox_home directory existed.
