--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.2.2	07-Mar-2018
+	- Now dbdeployer finds unused ports automatically, to avoid conflicts.
+	- Added ability of running faster tests with mock MySQL packages.
 0.2.1	04-Mar-2018
 	- Added --defaults flag
 	- Removed hardcoded names for multiple sandbox directories and shortcuts.
