--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+0.3.1	12-Mar-2018
+	- Added topologies "fan-in" and "all-masters"
+	- Feature complete: This is release candidate for 1.0
+	- Fixed bug on UUID generation.
 0.3.0	11-Mar-2018
 	- Implemented parallel deployment of multiple sandboxes
 	- Flag --concurrent is available for *deploy* and *delete*
