--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.3.5	21-Mar-2018
+	- Added test for on-the-fly template replacement
+	- Trivial changes to "sandboxes" output
 0.3.4	20-Mar-2018
 	- Changed test for group replication (now uses the
 	  same defined for multi-source replication)
