--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+1.4.1	05-May-2018
+	- Merged pull request #11 from percona-csalguero/include_version_in_dir
+	- Fixed Issue #12 "deploying a sandbox with invalid version does not fail"
+	- Fixed minor bugs
+	- Removed unnecessary parameter in CreateSingleSandbox
+	- Added instructions to call CreateSingleSandbox from other apps
+	  See ./docs/coding
+	- Minor code refactoring for Exit calls
+	- Added mock sandbox creation for unit tests
 1.4.0	28-Apr-2018
 	NEW FEATURES:
 	- Added option --enable-mysqlx (MySQL 5.7.12+)
