--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1.5.1	05-Jun-2018
+	- Improved documentation.
+	- Minor code refactoring
 1.5.0	12-May-2018
 	NEW FEATURES:
 	- Added option --binary-version, which allows the basedir to be other than
