--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+1.7.0	01-Jul-2018
+	NEW FEATURES
+	- Added option for custom history file for each sandbox
+	- Added option for unified history file in replication sandboxes.
+	BUGS FIXED
+	- Fixed bug in functional-test.sh, where some of the subtests were not
+	  executed.
+	TESTING
+	- Improved error checking in all test scripts
 1.6.0	19-Jun-2018
 	NEW FEATURES
 	  Now it is possible to invoke dbdeployer with a short version number,
