--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+1.8.1	03-Aug-2018
+	- Fixed Issue #27 "undetected deps when building with MKDOCS"
+	  No binary releases for this issue, as only build.sh is affected.
+1.8.1	12-Jul-2018
+	- Improved naming of error log for each sandbox
+
 1.8.0	08-Jul-2018
 	NEW FEATURES
 	- Implemented Issue 21 "Add support for directly using path to binaries"
