Fixes Issue #26 "Port management glitch"
* Changed algorithm that finds free ports;
* Uses two separate functions to find single ports and ranges;
* Makes sure that group sandbox creators call the function with the
  right values (for a "base-port" we check "base-port + 1")
* Added test to check whether sandboxes of adjoining versions
  deployed in reverse order will end up with the expected port number.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+1.8.3	05-Aug-2018
+	- Fixed Issue #26 "Port management glitch"
 1.8.2	05-Aug-2018
 	- Added ./vendor folder (simplifies dependencies)
 1.8.1	03-Aug-2018
